--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-stripe-checkout": "^2.6.3",
     "redux": "^4.1.1",
     "redux-persist": "^6.0.0",
+    "styled-components": "^5.3.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
